--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,13 +1,31 @@
 {
   "dependencies": {
+    "com.unity.addressables": "1.18.9",
+    "com.unity.assetbundlebrowser": "1.7.0",
+    "com.unity.cinemachine": "2.7.4",
     "com.unity.collab-proxy": "1.5.7",
+    "com.unity.editorcoroutines": "1.0.0",
     "com.unity.ide.rider": "3.0.7",
     "com.unity.ide.visualstudio": "2.0.8",
     "com.unity.ide.vscode": "1.2.3",
+    "com.unity.inputsystem": "1.0.2",
+    "com.unity.mathematics": "1.2.1",
+    "com.unity.multiplayer-hlapi": "1.1.1",
+    "com.unity.polybrush": "1.1.2",
+    "com.unity.postprocessing": "3.1.1",
+    "com.unity.probuilder": "5.0.3",
+    "com.unity.progrids": "3.0.3-preview.6",
+    "com.unity.render-pipelines.core": "11.0.0",
+    "com.unity.render-pipelines.universal": "11.0.0",
+    "com.unity.scriptablebuildpipeline": "1.19.0",
+    "com.unity.searcher": "4.3.2",
+    "com.unity.settings-manager": "1.0.3",
+    "com.unity.shadergraph": "11.0.0",
     "com.unity.test-framework": "1.1.24",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.5.5",
     "com.unity.ugui": "1.0.0",
+    "com.unity.visualeffectgraph": "11.0.0",
     "com.unity.visualscripting": "1.6.1",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
