--- a/Assets/Scripts/ssjjune2021/com.pdxpartyparrot.ssjjune2021.asmdef
+++ b/Assets/Scripts/ssjjune2021/com.pdxpartyparrot.ssjjune2021.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:10051649e6fa33340b1095a4d69174ae",
-        "GUID:82dfc764d9a91d244970d8d63f3b6388"
+        "GUID:82dfc764d9a91d244970d8d63f3b6388",
+        "GUID:75469ad4d38634e559750d17036d5f7c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
