--- a/Assets/Scripts/ssjjune2021/com.pdxpartyparrot.ssjjune2021.asmdef
+++ b/Assets/Scripts/ssjjune2021/com.pdxpartyparrot.ssjjune2021.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:10051649e6fa33340b1095a4d69174ae",
         "GUID:82dfc764d9a91d244970d8d63f3b6388",
-        "GUID:75469ad4d38634e559750d17036d5f7c"
+        "GUID:75469ad4d38634e559750d17036d5f7c",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
