--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.2d.sprite": "1.0.0",
     "com.unity.addressables": "1.18.9",
     "com.unity.assetbundlebrowser": "1.7.0",
     "com.unity.cinemachine": "2.7.4",
